trying to fix permission denied

--- a/.github/workflows/six.yml
+++ b/.github/workflows/six.yml
@@ -70,25 +70,39 @@ jobs:
         tags: |
           ghcr.io/${{ github.repository }}:${{ matrix.shopware-versions }}-php${{ matrix.php-versions }}
 
+    - uses: php-actions/composer@v6
+      with:
+        command: |
+          composer create-project \
+            --ignore-platform-reqs \
+            --no-interaction \
+            --no-scripts \
+            --no-progress \
+            --no-plugins \
+            --no-cache \
+            shopware/production:${{ matrix.shopware-versions }} $(pwd)/shopware-${{ matrix.shopware-versions }}
+
     - name: Prepare test
       run: |
-        docker run \
-          --rm \
-          -t \
-          --workdir /app \
-          -v $(pwd)/shopware-${{ matrix.shopware-versions }}:/app \
-          composer:2 \
-            create-project \
-              --ignore-platform-reqs \
-              --no-interaction \
-              --no-scripts \
-              --no-progress \
-              --no-plugins \
-              --no-cache \
-              shopware/production:${{ matrix.shopware-versions }} /app \
-        && chown -vR ${UID}:${UID} $(pwd) \
-        && cd shopware-${{ matrix.shopware-versions }} \
-        && git init
+        cd $(pwd)/shopware-${{ matrix.shopware-versions }}
+        git init
+    #     docker run \
+    #       --rm \
+    #       -t \
+    #       --workdir /app \
+    #       -v $(pwd)/shopware-${{ matrix.shopware-versions }}:/app \
+    #       composer:2 \
+    #         create-project \
+    #           --ignore-platform-reqs \
+    #           --no-interaction \
+    #           --no-scripts \
+    #           --no-progress \
+    #           --no-plugins \
+    #           --no-cache \
+    #           shopware/production:${{ matrix.shopware-versions }} /app \
+    #     && chown -vR ${UID}:${UID} $(pwd) \
+    #     && cd shopware-${{ matrix.shopware-versions }} \
+    #     && git init
 
     - name: Run test
       run: |
