reverted to run composer inside docker

--- a/.github/workflows/six.yml
+++ b/.github/workflows/six.yml
@@ -70,17 +70,36 @@ jobs:
         tags: |
           ghcr.io/${{ github.repository }}:${{ matrix.shopware-versions }}-php${{ matrix.php-versions }}
 
-    - uses: php-actions/composer@v6
-      with:
-        command: |
-          create-project \
-            --ignore-platform-reqs \
-            --no-interaction \
-            --no-scripts \
-            --no-progress \
-            --no-plugins \
-            --no-cache \
-            shopware/production:${{ matrix.shopware-versions }} ${{ env.GITHUB_WORKSPACE }}/shopware-${{ matrix.shopware-versions }}
+    - name: Prepare test
+      run: |
+        docker run \
+          --rm \
+          -t \
+          --workdir /app \
+          -v ${{ env.GITHUB_WORKSPACE }}/shopware-${{ matrix.shopware-versions }}:/app \
+          composer:2 \
+            create-project \
+              --ignore-platform-reqs \
+              --no-interaction \
+              --no-scripts \
+              --no-progress \
+              --no-plugins \
+              --no-cache \
+              shopware/production:${{ matrix.shopware-versions }} /app \
+        && cd shopware-${{ matrix.shopware-versions }} \
+        && git init
+
+    # - uses: php-actions/composer@v6
+    #   with:
+    #     command: |
+    #       create-project \
+    #         --ignore-platform-reqs \
+    #         --no-interaction \
+    #         --no-scripts \
+    #         --no-progress \
+    #         --no-plugins \
+    #         --no-cache \
+    #         shopware/production:${{ matrix.shopware-versions }} ${{ env.GITHUB_WORKSPACE }}/shopware-${{ matrix.shopware-versions }}
 
     - name: Prepare test
       run: |
