--- a/.github/workflows/six.yml
+++ b/.github/workflows/six.yml
@@ -70,7 +70,7 @@ jobs:
         tags: |
           ghcr.io/${{ github.repository }}:${{ matrix.shopware-versions }}-php${{ matrix.php-versions }}
 
-    - name: Prepare test
+    - name: Download Shopware v${{ matrix.shopware-versions }}
       run: |
         docker run \
           --rm \
@@ -85,9 +85,11 @@ jobs:
               --no-progress \
               --no-plugins \
               --no-cache \
-              shopware/production:${{ matrix.shopware-versions }} /app \
-        && cd shopware-${{ matrix.shopware-versions }} \
-        && git init
+              shopware/production:${{ matrix.shopware-versions }} /app
+
+        cd ${{ env.GITHUB_WORKSPACE }}/shopware-${{ matrix.shopware-versions }}
+
+        git init
 
     # - uses: php-actions/composer@v6
     #   with:
@@ -101,33 +103,11 @@ jobs:
     #         --no-cache \
     #         shopware/production:${{ matrix.shopware-versions }} ${{ env.GITHUB_WORKSPACE }}/shopware-${{ matrix.shopware-versions }}
 
-    - name: Prepare test
-      run: |
-        cd ${{ env.GITHUB_WORKSPACE }}/shopware-${{ matrix.shopware-versions }}
-        git init
-    #     docker run \
-    #       --rm \
-    #       -t \
-    #       --workdir /app \
-    #       -v $(pwd)/shopware-${{ matrix.shopware-versions }}:/app \
-    #       composer:2 \
-    #         create-project \
-    #           --ignore-platform-reqs \
-    #           --no-interaction \
-    #           --no-scripts \
-    #           --no-progress \
-    #           --no-plugins \
-    #           --no-cache \
-    #           shopware/production:${{ matrix.shopware-versions }} /app \
-    #     && chown -vR ${UID}:${UID} $(pwd) \
-    #     && cd shopware-${{ matrix.shopware-versions }} \
-    #     && git init
-
-    - name: Run test
+    - name: Test image ${{ github.repository }}:${{ matrix.shopware-versions }}-php${{ matrix.php-versions }}
       run: |
         docker run \
           --rm \
-          -v $(pwd)/shopware-${{ matrix.shopware-versions }}:/src \
+          -v ${{ env.GITHUB_WORKSPACE }}/shopware-${{ matrix.shopware-versions }}:/src \
           ghcr.io/${{ github.repository }}:${{ matrix.shopware-versions }}-php${{ matrix.php-versions }}
 
     - name: Build and push
