--- a/.github/workflows/six.yml
+++ b/.github/workflows/six.yml
@@ -75,9 +75,12 @@ jobs:
         docker run \
           --rm \
           -t \
+          -e COMPOSER_VERSION=2 \
+          -u "$(id -u):$(id -g)" \
           --workdir /app \
           -v ${{ github.workspace }}/shopware-${{ matrix.shopware-versions }}:/app \
-          composer:2 \
+          webdevops/php:${{ matrix.php-versions }} \
+            composer \
             create-project \
               --ignore-platform-reqs \
               --no-interaction \
